feat: implement account commands handling